infra/k8s/base/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
    app: redis-pod
spec:
  containers:
  - name: redis-pod
    image: redis:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis-pod
  ports:
  - port: 6379
    targetPort: 6379
