infra/k8s/base/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-url-shortner
spec:
  selector:
    matchLabels:
      app: server-url-shortner
  replicas: 1
  template:
    metadata:
      labels:
        app: server-url-shortner
    spec:
      containers:
      - name: server-url-shortner
        image: server-image
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: url-shortner-service
spec:
  selector:
    app: server-url-shortner
  ports:
  - port: 3000
    targetPort: 3000
